	- temporary path and dummy root now contain the process ID to allow running of multiple instances from the same folder (NOTE: left-overs from frocefully termination and crashes cannot be cleared anymore)
	- removed option "pause_interval"
	- added check for signal file "pause.<pid>" to pause processing on the next entry (needs to be placed in working folder)
	- fixed bug in is_absolute_path() - absolute paths for "executable" are working now
	- do not treat path starting with "/" as absolute on windows
	- moved "output_folder" check before first usage of it
	- changed options "str" and "output_folder" from CFG_STR to CFG_STR_PTR
		- fixes reading of "output_folder" - it was only reading the first 4 characters
		- they cannot be left empty anymore - the defaults in the source had to be removed
	- removed config_entry_type CFG_STR from config.c/.h (it was never working properly)
	- added message about "test_softreset" only working with "use_debug" enabled
	- removed "hack_debug" as debugger can also be in non-debug builds now
	- "use_debug" can now be used with non-debug builds
	- added option "use_dipswitches" to test all non-default dipswitch settings (needs a patch to src/emu/info.c)
	- updated URLs in comments from toseciso.org to redump.net

	create_report
	- added option "report_type" (0 = result report / 1 = comparison report)
	- added option "compare_folder" (used for comparison report to compare "xml_folder" against)
	- implemented comparison report (checks "exitcode", "stderr" and "png_crc")
	- fixed crash when invalid configuration was specified
	- added option "print_stdout" to add stdout data to report
	- made it possible to simply use "print_stdout" and "print_stderr"
	- added "stdout_file" and "stderr_file" to default configuration to match old reports
	- always print all available data in normal mode
	- stdout was not printed was not added to report if stderr was missing
	- added support for dipswitches
	- fixed some memory leaks