@@ -244,6 +244,8 @@ static int create_report_from_filename(const char *const filename, const struct 
 				xmlChar* autosave_key = xmlGetProp(output_node, (const xmlChar*)"autosave");
 				xmlChar* dipswitch_key = xmlGetProp(output_node, (const xmlChar*)"dipswitch");
 				xmlChar* dipvalue_key = xmlGetProp(output_node, (const xmlChar*)"dipvalue");
+				xmlChar* configuration_key = xmlGetProp(output_node, (const xmlChar*)"configuration");
+				xmlChar* confsetting_key = xmlGetProp(output_node, (const xmlChar*)"confsetting");
 			
 				xmlNodePtr output_childs = output_node->children;
 				xmlNodePtr devices_node = NULL;
@@ -280,6 +282,8 @@ static int create_report_from_filename(const char *const filename, const struct 
 										fprintf(r_cb_data->report_fd, "  * Ramsize: ''%s''\n", ramsize_key);
 									if( dipswitch_key && dipvalue_key )
 										fprintf(r_cb_data->report_fd, "  * Dipswitch: ''%s'' Value: ''%s'' \n", dipswitch_key, dipvalue_key);
+									if( configuration_key && confsetting_key )
+										fprintf(r_cb_data->report_fd, "  * Configuration: ''%s'' Value: ''%s'' \n", configuration_key, confsetting_key);
 									if( devices_node )
 									{
 										xmlAttrPtr dev_attrs = devices_node->properties;
@@ -308,6 +312,8 @@ static int create_report_from_filename(const char *const filename, const struct 
 										fprintf(r_cb_data->report_fd, " (ramsize %s)", ramsize_key);
 									if( dipswitch_key && dipvalue_key )
 										fprintf(r_cb_data->report_fd, " (dipswitch %s value %s)", dipswitch_key, dipvalue_key);
+									if( configuration_key && confsetting_key )
+										fprintf(r_cb_data->report_fd, " (configuration %s value %s)", configuration_key, confsetting_key);
 									if( devices_node )
 									{
 										xmlAttrPtr dev_attrs = devices_node->properties;
@@ -346,7 +352,11 @@ static int create_report_from_filename(const char *const filename, const struct 
 					}
 					output_childs = output_childs->next;
 				}
-			
+
+				xmlFree(confsetting_key);
+				confsetting_key = NULL;
+				xmlFree(configuration_key);
+				configuration_key = NULL;			
 				xmlFree(dipvalue_key);
 				dipvalue_key = NULL;
 				xmlFree(dipswitch_key);
