@@ -432,6 +432,7 @@
 	- "use_debug" can now be used with non-debug builds
 	- added option "use_dipswitches" to test all non-default dipswitch settings (needs a patch to src/emu/info.c)
 	- updated URLs in comments from toseciso.org to redump.net
+	- added option "use_configurations" to test all non-default configurations settings (needs a patch to src/emu/info.c)
 
 	create_report
 	- added option "report_type" (0 = result report / 1 = comparison report)
@@ -445,3 +446,4 @@
 	- stdout was not printed was not added to report if stderr was missing
 	- added support for dipswitches
 	- fixed some memory leaks
+	- added support for configurations
